# zydis-submodule-example

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  myproject.c
src/: README.txt  myproject.c
usermode/: README.md
win-kernel/: CMakeLists.txt  ZydisDriver.c
